# ni-media

./: .appveyor.yml  .clang-format  .codecov.yml  .gitignore  .gitmodules  .lfsconfig  .lsfconfig  .travis.yml  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  LICENSE  NI.package.cmake  README.md  azure-pipelines.yml  vcpkg.json
audiostream/: CMakeLists.txt  README.md
audiostream/doc/: ifstream.md  istream.md  ofstream.md  ostream.md
audiostream/inc/ni/media/audio/: custom_backend_source.h  fstream_info.h  ifstream.h  ifstream_info.h  ifstream_support.h  ifvectorstream.h  istream.h  istream_info.h  istream_source.h  ivectorstream.h  ofstream.h  ofstream_info.h  ofstream_support.h  ostream.h  ostream_info.h  stream_info.h  streambuf.h
audiostream/inc/ni/media/audio/aiff/: aiff_ifstream_info.h  aiff_ofstream.h  aiff_ofstream_info.h  aiff_specific_info.h
audiostream/inc/ni/media/audio/wav/: wav_ifstream_info.h  wav_ofstream.h  wav_ofstream_info.h  wav_specific_info.h
audiostream/inc/ni/media/iostreams/: positioning.h
audiostream/src/ni/media/audio/: fourcc.h  fstream_info.cpp  ieee80.h  ifstream.cpp  ifstream_info.cpp  ifvectorstream.cpp  iotools.cpp  iotools.h  istream.cpp  istream_info.cpp  ivectorstream.cpp  ofstream.cpp  ofstream_info.cpp  ostream.cpp  sink.h  source.h  source_impl.h  stream_info.cpp
audiostream/src/ni/media/audio/aiff/: aiff_chunks.h  aiff_custom_source.h  aiff_file_sink.h  aiff_file_source.h  aiff_ofstream.cpp  aiff_sink.h  aiff_source.h  aiff_vector_source.h
audiostream/src/ni/media/audio/flac/: flac_custom_source.h  flac_file_sink.cpp  flac_file_sink.h  flac_file_source.h  flac_source.h  flac_vector_source.h
audiostream/src/ni/media/audio/iostreams/: container_sink.h  container_source.h
audiostream/src/ni/media/audio/mp3/: mp3_custom_source.h  mp3_file_source.h  mp3_vector_source.h
audiostream/src/ni/media/audio/mp4/: mp4_custom_source.h  mp4_file_source.h  mp4_vector_source.h
audiostream/src/ni/media/audio/ogg/: ogg_custom_source.h  ogg_file_source.h  ogg_source.h  ogg_vector_source.h
audiostream/src/ni/media/audio/os/: os_source.h
audiostream/src/ni/media/audio/sink/: aiff_file_sink.h  aiff_sink.h  container_sink.h  flac_file_sink.cpp  wav_file_sink.h  wav_sink.h
audiostream/src/ni/media/audio/source/: aiff_file_source.h  aiff_source.h  aiff_vector_source.h  avassetreader_source.h  avassetreader_source.mm  container_source.h  core_audio_file_source.cpp  core_audio_file_source.h  flac_file_source.cpp  flac_file_source.h  gstreamer_file_source.cpp  gstreamer_file_source.h  media_foundation_file_source.cpp  media_foundation_file_source.h  media_foundation_helper.h  mp3_file_source.cpp  mp3_file_source.h  mp4_file_source.cpp  mp4_file_source.h  ogg_file_source.cpp  ogg_file_source.h  wav_file_source.h  wav_source.h  wav_vector_source.h  wma_file_source.cpp  wma_file_source.h
audiostream/src/ni/media/audio/wav/: wav_chunks.h  wav_sink.h  (+7 more)
audiostream/src/ni/media/iostreams/: fetch.h  positioning.h  stream_buffer.h  write_obj.h
audiostream/test/: CMakeLists.txt  generator.cpp  gtest_main.cpp  main.cpp
audiostream/test/ni/media/: generators.h  read_interlaced_test.h  reference_test.h  signals.h  sink_test.h  source_test.cpp  source_test.h  statistics.h  test_helper.cpp  test_helper.h
audiostream/test/ni/media/audio/: ifstream.test.cpp  ifstream_robustness.test.cpp  ifvectorstream.test.cpp  istream.test.cpp  istream_read.test.cpp  istream_read.test.h  istream_read_floating_point.test.cpp  istream_read_signed_integer.test.cpp  istream_read_unsigned_integer.test.cpp  ivectorstream.test.cpp  ofstream.test.cpp
audiostream/test/ni/media/generators/: modulated_sine.h
audiostream/test/ni/media/iostreams/: stream_buffer.test.cpp
audiostream/test/test-reports/: audiostream_test.xml
audiostream/test/test_files/: .gitattributes  readme.txt
audiostream/test/test_files/reference_files/: generate_test_files.py  sin440.1.44100.44100.aac192.m4a  sin440.1.44100.44100.alac.m4a  sin440.1.44100.44100.f32be.aiff  sin440.1.44100.44100.f64be.aiff  sin440.1.44100.44100.flac  sin440.1.44100.44100.s16be.aiff  sin440.1.44100.44100.s16le.aac192.m4a  sin440.1.44100.44100.s16le.alac.m4a  sin440.1.44100.44100.s16le.flac  sin440.1.44100.44100.s24be.aiff  sin440.1.44100.44100.s24le.alac.m4a  sin440.1.44100.44100.s24le.flac  sin440.1.44100.44100.s32be.aiff  sin440.1.44100.44100.s32le.alac.m4a  sin440.1.44100.44100.s8be.aiff  sin440.1.44100.44100.s8be.gap.aiff  sin440.1.48000.48000.aac192.m4a  sin440.1.48000.48000.alac.m4a  sin440.1.48000.48000.f32be.aiff  sin440.1.48000.48000.f64be.aiff  sin440.1.48000.48000.s16be.aiff  sin440.1.48000.48000.s16le.aac192.m4a  sin440.1.48000.48000.s16le.alac.m4a  sin440.1.48000.48000.s16le.flac  sin440.1.48000.48000.s24be.aiff  sin440.1.48000.48000.s24le.alac.m4a  sin440.1.48000.48000.s24le.flac  sin440.1.48000.48000.s32be.aiff  sin440.1.48000.48000.s32le.alac.m4a  sin440.1.48000.48000.s8be.aiff  sin440.1.48000.48000.s8be.gap.aiff  sin440.1.96000.96000.alac.m4a  sin440.1.96000.96000.f32be.aiff  sin440.1.96000.96000.f64be.aiff  sin440.1.96000.96000.s16be.aiff  sin440.1.96000.96000.s16le.alac.m4a  sin440.1.96000.96000.s16le.flac  sin440.1.96000.96000.s24be.aiff  sin440.1.96000.96000.s24le.alac.m4a  (+128 more)
audiostream/test/test_files/user_files/: L1m4a-123456789äöüÄÖÜ!@#$%^&_(フジkサが).m4a  unicode123456789äöüÄÖÜß!@#$%^&_(フジkサが)-ah7Hfds.aac.m4a  unicode123456789äöüÄÖÜß!@#$%^&_(フジkサが)-ah7Hfds.alac.m4a  unicode123456789äöüÄÖÜß!@#$%^&_(フジkサが)-ah7Hfds.flac
pcm/: CMakeLists.txt  README.md
pcm/inc/ni/media/pcm/: algorithm.h  compiletime_format.h  converter.h  description.h  dispatch.h  format.h  iterator.h  limits.h  runtime_format.h
pcm/src/ni/media/pcm/: dummy.cpp  format.cpp
pcm/test/: CMakeLists.txt  main.cpp
pcm/test/ni/media/pcm/: converter.test.cpp  dispatch.test.cpp  format.test.cpp  iterator.test.cpp  iterator_copy.test.cpp  iterator_copy.test.h  iterator_copy_floating_point.test.cpp  iterator_copy_signed_integer.test.cpp  iterator_copy_unsigned_integer.test.cpp  limits.test.cpp  numspace.h
pcm/test/test-reports/: pcm_test.xml
(+51 files in other folders)
